Update edit parameters

--- a/themes/hugo-geekdoc/layouts/posts/single.html
+++ b/themes/hugo-geekdoc/layouts/posts/single.html
@@ -1,4 +1,5 @@
 {{ define "main" }}
+{{< toc (format=[html|raw]) >}}
   <article class="gdoc-post">
     <header class="gdoc-post__header">
       <h1 class="gdoc-post__title">{{ partial "utils/title" . }}</h1>
